# tebini

./: LICENSE.md  README.md  package-lock.json  package.json  prettier.config.cjs  tsconfig.json
backend/: Cargo.toml
backend/src/: main.rs
client/: .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  uno.config.ts  vite.config.ts
client/src/: App.tsx  App.vue  main.ts  store.ts
client/src/components/: Explorer.tsx  ExplorerItem.tsx  Files.tsx  FilesItem.tsx  Note.tsx  NoteInput.tsx  Page.tsx  PageEditor.vue  PageEditorItem.vue  PageInput.tsx  PageList.vue  PageListGroup.vue  PageListItem.vue  PageStats.tsx  PageStatsItem.tsx  Status.tsx  StatusItem.tsx  Trash.tsx  TrashItem.tsx
client/src/stores/: notes.ts  trash.ts  types.ts  utils.ts
src/: env.mjs
src/pages/: _app.tsx  index.tsx
