[package]
name = "tebini-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.15"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.70"
httpc-test = "0.1.1"
